--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 
 header{
     height: 60px;
-    background: #843B44;
+    background: #8B0000;
     display: flex;
     position: fixed;
     top: 0;
@@ -36,7 +36,7 @@ header{
 }
 
 header .nav_bar {
-    background: #843B44;
+    background: #8B0000;
     width: 100%;    
     display: flex;
     align-items: center;
@@ -228,12 +228,17 @@ main .content .inside_text .connect_ li{
 }
 
 main .content .inside_text .connect_ #btn{
-    background: #C85157;
+    background: #8B0000;
     border: 0;
     height: 39px;
     color: white;
     font-weight: bold;
     font-size: 14px;
+    transition: all 0.4s ease-in-out;
+}
+main .content .inside_text .connect_ #btn:hover{
+    font-size: 20px;
+    cursor: pointer;
 }
 
 @media(max-width: 690px){
@@ -349,7 +354,7 @@ section .qualities_ .icon_box h4{
 
 
 footer {
-    background: #843B44;
+    background: #800000;
     padding: 0;
     /* height: 200px; */
     margin-top: 60px;
@@ -399,7 +404,13 @@ footer .company_features .company_features_list{
 footer .company_features .company_features_list li a{
     color: white;
     text-decoration: none;
+    transition: all 0.4s ease-in-out;
 }
+
+footer .company_features .company_features_list li a:hover{
+    font-size: 30px;
+}
+
 
 footer .company_features,
 footer .company_info,
@@ -421,12 +432,12 @@ footer .company_services h2 a{
     text-decoration: none;
     border-bottom: 3px solid black;
     padding-bottom: 5px;
-    transition: all 0.7s ease-in-out;
+    transition: all 0.5s ease-in-out;
 } 
 
 footer .company_services h2 a:hover{
     color: black;
-    transition: all 0.7s ease-in-out;
+    transition: all 0.5s ease-in-out;
     border-bottom: 3px solid white;
 }
 
@@ -436,15 +447,43 @@ footer .company_services h2 a:hover{
     margin-top: 7px;
 } */
 
-footer .connect_email_ {
-    margin-top: 20px;
-    margin-left: 80px;
-    
+.contact_way{
+    text-align: center;
+    /* padding-bottom: 20px; */
+    margin-bottom: 20px;
 }
+
+.contact_way legend{
+    font-size: 30px;
+    color: grey;
+    font-weight: bold;
+}
+
+.contact_way .contact_platform{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    gap: 50px;
+    /* justify-content:space-evenly; */
+    margin-top: 15px;
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.contact_way .contact_platform a{
+    color: white;
+    font-size: 30px;
+    transition: all  0.3s ease-in-out;
+}
+
+.contact_way .contact_platform a:hover{
+    font-size: 40px;
+}
+
 
 @media (max-width: 1060px){
     footer{
-        height: 100%;
+        height: 1000px;
     }
     footer .main_footer {
         flex-direction: column;
@@ -459,4 +498,12 @@ footer .connect_email_ {
         margin-left: 0px;   
     }
 
+    .contact_way{
+        position: relative;
+        top: 40%;
+    }
+    .contact_platform{
+        flex-direction: column;
+        /* background: orange; */
+    }
 }
