--- a/about.css
+++ b/about.css
@@ -147,6 +147,11 @@ header .nav_bar .nav_links {
 }
 
 
+main{
+    flex: 1;
+    margin-top: 80px;
+}
+
 footer {
     background: #800000;
     padding: 0;
@@ -231,6 +236,7 @@ footer .company_services h2 a{
 
 footer .company_services h2 a:hover{
     color: black;
+    font-size: 30px;
     transition: all 0.5s ease-in-out;
     border-bottom: 3px solid white;
 }
