--- a/products.css
+++ b/products.css
@@ -1,455 +1,336 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;;
+    box-sizing: border-box;
 }
-
 
 body{
-    font-family: "Dosis", sans-serif;
+    font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 100;
     font-style: normal;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    height: auto;
+    font-variation-settings:
+      "slnt" 0;
+    padding-top: 40px;
+    background: #E1F4F3;
 }
 
-.container {
-    max-width: 1000px;
+.container{
+    max-width: 1200px;
     margin: auto;
 }
 
-
-header{
-    height: 60px;
-    /* background: #843B44; */
+main .brandButton{
     display: flex;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-    align-items: center;
-    font-size: 14px;
     justify-content: center;
-    /* background: linear-gradient(to right, ) */
-    background: #002D62;
-}
-
-header .nav_bar {
-    background: #002D62;
-    width: 100%;    
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-header .nav_bar .main_div{
-    display: flex;    
-    justify-content: space-between;  
-    align-items: center;
     gap: 30px;
 }
 
-header .nav_bar .main_div .nav_left {
-    display: flex;
-}
-
-header .nav_bar .main_div .nav_left img{
-    width: 40px;
-    height: 40px;
-
-}
-
-header .nav_bar .main_div .nav_links {
-    outline: 0;
-}
-
-header .nav_bar .main_div .nav_right .nav_links .menu{
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #007AB7;
-    border: 0;
-    border-radius: 7px;
+main .brandButton button{
+    padding: 10px 15px;
+    width: 150px;
+    font-size: 15px;
+    border: none;
+    background: #111F4D;
     color: white;
-    outline: 0;
-    margin-top: 5px;
+    border-radius: 7px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+main .brandButton button:hover{
+    opacity: 0.8;
+}
+
+
+main .hideShraddha{
     display: none;
 }
 
-header .nav_bar .main_div .nav_right .menu:hover{
-    opacity: 0.7;
-    transition: 0.6s;
-    background: grey;
-    color: #007AB7;
-    font-weight: bold;
-    font-size: 15px;
-    outline: 0;
+main .hideSirjan{
+    display: none;
 }
 
-header .nav_bar .nav_links {
+main .broiler .products_box .broiler_div{
     display: flex;
-    align-items: center;    
-    gap: 30px;
-    margin-left: 40px;
-}
-
-
-
-.nav_bar .nav_links li{
-    list-style-type: none;
-}
-
-.nav_bar .nav_left .nav_links li a{
-    text-decoration: none;
-    color: white;
-}
-
-@media (max-width: 600px){
-    .nav_left .nav_links.hide{
-        display: none;
-    }
-
-    header .nav_bar .main_div .nav_right .nav_links .menu{
-        display: block;
-    }
-
-    header{
-        height:70px;
-    }
-
-    header .nav_bar .main_div{
-        gap: 0px;
-        /* flex-direction: column; */
-    }
-
-    .nav_left .nav_links{
-        font-size: 20px;
-        flex-direction: column;
-        position: absolute;
-        top: 50%;
-        left: -11%;
-        background: white;
-        font-weight: bold;
-        width: 100%;
-        /* margin-left: -300px; */
-        margin-top: 35px;
-        padding: 20px;
-        opacity: 0.9;
-        color: black;
-
-    }
-
-    .nav_bar .nav_left .nav_links li a{
-        color: black;
-    }
-}
-
-
-main {
-    flex: 1;
+    justify-content: right;
     position: relative;
-    top: 65px;
-    padding-bottom: 40px;
-    margin-top: 25px;
-}
-
-main .content{
-    position: relative;
-    width: 100%;
-    height: 560px;
-}   
-
-
-.main_div{
-    text-align: center;
-}
-
-
-.brands{
-    padding-bottom: 20px;
-}
-
-.brands legend{
-    color: #843B44;
-    font-size: 35px;
-}
-
-.brandPart {
-    display: flex;
-    justify-content: space-around;
-}
-
-.brands .brand_name{
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-    margin-top: 30px;
-    font-weight: bold;
-    font-size: 25px;
-}
-
-.brand_name a{
-    color: #007AB7;
-    text-decoration: none;
-    
-}
-
-
-.products_description .products{
-    position: relative;
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    justify-content: space-around;
-}
-
-.products_description h1{
-    font-size: 30px;
-    color: #843B44;
-}
-
-.products div{
-    position: relative;
-    height: 300px;
-    width: 250px;
-    /* border: 1px solid black; */
-}
-
-.products div h4{
-    /* z-index: 100; */
-    position: absolute;
-    left: 50%;
-    top: 30%;
-    font-size: 25px;
-    transform: translate(-50%, -50%);
-}
-
-
-.products .tags_{
-    list-style-type: none;
-    position: absolute;
-    left: 50%;
-    top: 60%;
-    font-size: 20px;
-    font-weight: 600;
-    transform: translate(-50%, -50%);
-    /* margin-top: 20px; */
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.products .tags_ a {
-    color: black;
-    text-decoration: none;   
-}
-
-#pig{
-    top: 70%;
-}
-
-#fish{
-    width: 200px;
-}
-
-.cattle_head{
-    width: 200px;
-}
-
-.products img{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    object-fit: cover;
-    filter: blur(2px);
-    border-radius: 3px;
-}
-
-.products_description.srijan{
-    margin-top: 100px;
-}
-
-@media (max-width: 450px){
-    .brands .brandPart{
-        flex-direction: column;
-    }
-}
-
-
-@media (max-width: 850px){
-    .products{
-        flex-direction: column;
-        gap: 20px;
-        /* margin-left: 230px; */
-        position: relative;
-        left: 30%;
-    }
-/* 
-    .brands{
-        
-    } */
-}
-
-
-
-
-
-footer {
-    background: black;
-    padding: 0;
-    /* height: 200px; */
-    margin-top: 60px;
-    /* position: relative; */
-}
-
-
-footer .main_footer{
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 50px;
-    align-items: center;
-    /* margin-top: 50px; */
-    height: 200px;
-    /* text-align: center; */
-    /* background: white; */
-}
-
-footer .company_info {
-    display: flex;
-    flex-direction: column;
+    right: 200px;
+    /* gap: 30px; */
+    /* background: #E1F4F3; */
     gap: 7px;
-    text-align: left;
+    padding: 10px;
+    /* width: 1000px; */
 }
 
-footer .company_info h1{
-    color: #007AB7;
-    /* color: white; */
-    font-weight: bold;
-}
-
-footer .company_info h4{
-    /* text-align: center; */
-    color: white;
-}
-
-footer .company_features .company_features_list{
-    list-style-type: none;
-    font-weight: bold;
-    margin-top: 20px;
+main .broiler .products_box .broiler_div .left_content{
     display: flex;
-    flex-direction: column;
-    gap: 5px;
     text-align: center;
-}
-
-footer .company_features .company_features_list li a{
-    color: white;
-    text-decoration: none;
-    transition: all 0.4s ease-in-out;
-}
-
-footer .company_features .company_features_list li a:hover{
-    font-size: 30px;
-}
-
-
-footer .company_features,
-footer .company_info,
-footer .company_services{
-    margin-top: 60px;
-}
-
-footer .company_services{
-    display: flex;
-    flex-direction: column;
-    text-align: right;
-    gap: 20px;
-}
-
-footer .company_services h2 a{
-    /* color: #007AB7; */
-    color: white;
-    outline: 0;
-    text-decoration: none;
-    border-bottom: 3px solid black;
-    padding-bottom: 5px;
-    transition: all 0.5s ease-in-out;
-} 
-
-footer .company_services h2 a:hover{
-    color: black;
-    transition: all 0.5s ease-in-out;
-    border-bottom: 3px solid white;
-}
-
-
-/* footer .company_services h3{
-    color: white;
-    margin-top: 7px;
-} */
-
-.contact_way{
-    text-align: center;
-    /* padding-bottom: 20px; */
-    margin-bottom: 20px;
-}
-
-.contact_way legend{
-    font-size: 30px;
-    color: grey;
-    font-weight: bold;
-}
-
-.contact_way .contact_platform{
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    gap: 50px;
-    /* justify-content:space-evenly; */
-    margin-top: 15px;
+    align-items: center;
+    gap: 15px;
     position: relative;
-    padding-bottom: 20px;
+    /* height: 210px; */
 }
 
-.contact_way .contact_platform a{
-    color: white;
-    font-size: 30px;
-    transition: all  0.3s ease-in-out;
+main .broiler .products_box .broiler_div .left_content img{
+    border-radius: 5px;
 }
 
-.contact_way .contact_platform a:hover{
-    font-size: 40px;
+main .broiler .products_box .broiler_div .right_content{
+    height: 300px;
+    /* background: orange; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+main .broiler .products_box .broiler_div .right_content img{
+    height: 300px;
+    width: 300px;
+    border-radius: 4px;
+}
+
+/* break */
+
+main .layers{
+    margin-top: 50px;
+    width: 1000px;
+}
+
+main .layers .products_box .layers_div{
+    display: flex;
+    justify-content: left;
+    position: relative;
+    left: 200px;
+    /* gap: 30px; */
+    /* background: #E1F4F3; */
+    gap: 7px;
+    padding: 10px;
+    /* width: 1000px; */
+}
+
+main .layers .products_box .layers_div .right_content{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+    /* height: 210px; */
+}
+
+main .layers .products_box .layers_div .right_content img{
+    border-radius: 5px;
+}
+
+main .layers .products_box .layers_div .left_content{
+    height: 300px;
+    /* background: orange; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+main .layers .products_box .layers_div .left_content img{
+    height: 300px;
+    width: 300px;
+    border-radius: 4px;
 }
 
 
-@media (max-width: 1060px){
-    footer{
-        height: 1000px;
-    }
-    footer .main_footer {
-        flex-direction: column;
-        /* text-align:center; */
-    }
-    .main_footer .company_info,
-    .main_footer .company_services{
-        text-align: center;
-        /* background: orange; */
-    }
-    footer .connect_email_ {
-        margin-left: 0px;   
-    }
+/* pig */
+main .pig{
+    margin-top: 50px;
+}
 
-    .contact_way{
-        position: relative;
-        top: 40%;
-    }
-    .contact_platform{
-        flex-direction: column;
-        /* background: orange; */
-    }
+main .pig .products_box .pig_div{
+    display: flex;
+    justify-content: right;
+    position: relative;
+    right: 200px;
+    /* gap: 30px; */
+    /* background: #E1F4F3; */
+    gap: 7px;
+    padding: 10px;
+    /* width: 1000px; */
+}
+
+main .pig .products_box .pig_div .left_content{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+    /* height: 210px; */
+}
+
+main .pig .products_box .pig_div .left_content img{
+    border-radius: 5px;
+}
+
+main .pig .products_box .pig_div .right_content{
+    height: 300px;
+    /* background: orange; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+main .pig .products_box .pig_div .right_content img{
+    height: 300px;
+    width: 300px;
+    border-radius: 4px;
+}
+
+/* fish */
+main .fish{
+    margin-top: 50px;
+    width: 1000px;
+}
+
+main .fish .products_box .fish_div{
+    display: flex;
+    justify-content: left;
+    position: relative;
+    left: 200px;
+    /* gap: 30px; */
+    /* background: #E1F4F3; */
+    gap: 7px;
+    padding: 10px;
+    /* width: 1000px; */
+}
+
+main .fish .products_box .fish_div .right_content{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+    /* height: 210px; */
+}
+
+main .fish .products_box .fish_div .right_content img{
+    border-radius: 5px;
+}
+
+main .fish .products_box .fish_div .left_content{
+    height: 300px;
+    /* background: orange; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+main .fish .products_box .fish_div .left_content img{
+    height: 300px;
+    width: 300px;
+    border-radius: 4px;
+}
+
+
+
+/* break */
+/* giriraj */
+
+main .giriraj{
+    margin-top: 50px;
+}
+
+main .giriraj .products_box .giriraj_div{
+    display: flex;
+    justify-content: right;
+    position: relative;
+    right: 200px;
+    /* gap: 30px; */
+    /* background: #E1F4F3; */
+    gap: 7px;
+    padding: 10px;
+    /* width: 1000px; */
+}
+
+main .giriraj .products_box .giriraj_div .left_content{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+    /* height: 210px; */
+}
+
+main .giriraj .products_box .giriraj_div .left_content img{
+    border-radius: 5px;
+}
+
+main .giriraj .products_box .giriraj_div .right_content{
+    height: 300px;
+    /* background: orange; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+main .giriraj .products_box .giriraj_div .right_content img{
+    height: 300px;
+    width: 300px;
+    border-radius: 4px;
+}
+
+/* broiler Sirjan */
+main .broilerSirjan{
+    margin-top: 50px;
+    width: 1000px;
+}
+
+main .broilerSirjan .products_box .broilerSirjan_div{
+    display: flex;
+    justify-content: left;
+    position: relative;
+    left: 200px;
+    /* gap: 30px; */
+    /* background: #E1F4F3; */
+    gap: 7px;
+    padding: 10px;
+    /* width: 1000px; */
+}
+
+main .broilerSirjan .products_box .broilerSirjan_div .right_content{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+    /* height: 210px; */
+}
+
+main .broilerSirjan .products_box .broilerSirjan_div .right_content img{
+    border-radius: 5px;
+}
+
+main .broilerSirjan .products_box .broilerSirjan_div .left_content{
+    height: 300px;
+    /* background: orange; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+main .broilerSirjan .products_box .broilerSirjan_div .left_content img{
+    height: 300px;
+    width: 300px;
+    border-radius: 4px;
+}
+
+
+
+
+
+
+
+img{
+    width: 150px;
+    height: 200px;
 }
