--- a/style.css
+++ b/style.css
@@ -1,595 +1,575 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-
-body{
-    font-family: "Dosis", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-style: normal;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    height: auto;
+body {
+  font-family: "Dosis", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  height: auto;
 }
 
-.container {    
-    max-width: 1200px;
-    margin: auto;
-    /* border: 1px solid black; */
+.container {
+  max-width: 1200px;
+  margin: auto;
+  /* border: 1px solid black; */
 }
 
-
-header{
-    /* height: 0px; */
-    background: #800000;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-    font-size: 16px;
-    
+header {
+  /* height: 0px; */
+  background: #800000;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  font-size: 16px;
 }
 
-header .top_nav{
-    background: white;
-    height: 40px;
+header .top_nav {
+  background: white;
+  height: 40px;
 }
 
-.displayNone{
-    display: none;
+.displayNone {
+  display: none;
 }
 
-header .top_nav .connection_div{
-    display: flex;
-    justify-content: right;
-    padding: 10px;
-    gap: 10px;
+header .top_nav .connection_div {
+  display: flex;
+  justify-content: right;
+  padding: 10px;
+  gap: 10px;
 }
 
-header .top_nav .connection_div p{
-    color: #053B50;
-    font-weight: bold;
+header .top_nav .connection_div p {
+  color: #053b50;
+  font-weight: bold;
 }
 
-header .top_nav .connection_div h4 a{
-    color: #0766AD;
-    font-weight: 600;
-    text-decoration: none;
-    border-bottom: 2px solid #0766AD;
-
+header .top_nav .connection_div h4 a {
+  color: #0766ad;
+  font-weight: 600;
+  text-decoration: none;
+  border-bottom: 2px solid #0766ad;
 }
 
 header .nav_bar {
-    background: #800000;
-    width: 100%;    
-    height: 70px;
-    /* border: 1px solid black; */
-    /* height: 100%; */
-    /* margin-top: 20px; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background: #800000;
+  width: 100%;
+  height: 70px;
+  /* border: 1px solid black; */
+  /* height: 100%; */
+  /* margin-top: 20px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-header .nav_bar.sticky{
-    position:fixed;
-    width: 100%;
-    top: 0px;
-    animation: navTransition 0.5s ease-in-out;
+header .nav_bar.sticky {
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  animation: navTransition 0.5s ease-in-out;
 }
 
-header .nav_bar .main_nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header .nav_bar .main_nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-header .nav_bar .main_div{
-    display: flex;    
-    justify-content: space-between;  
-    align-items: center;
-    width: 100%;
-    gap: 120px;
+header .nav_bar .main_div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
 }
 
 header .nav_bar .main_div .nav_left {
-    display: flex;
+  display: flex;
 }
 
-
-header .nav_bar .main_div .nav_left img{
-    width: 50px;
-    height: 50px;
-    outline: 0;
-
+header .nav_bar .main_div .nav_left img {
+  width: 50px;
+  height: 50px;
+  outline: 0;
 }
 
 header .nav_bar .main_div .nav_links {
-    outline: 0;
+  outline: 0;
 }
 
-header .nav_bar .main_div .nav_right .nav_links .menu{
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #007AB7;
-    border: 0;
-    border-radius: 7px;
-    color: white;
-    outline: 0;
-    margin-top: 5px;
-    display: none;
+header .nav_bar .main_div .nav_right .menu {
+  display: none;
+  padding: 10px;
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  background: #007ab7;
+  border: 0;
+  border-radius: 7px;
+  color: white;
+  outline: 0;
+  margin-top: 5px;
+  margin-left: 70px;
 }
 
-header .nav_bar .main_div .nav_right .menu:hover{
-    opacity: 0.7;
-    transition: 0.6s;
-    background: grey;
-    color: #007AB7;
-    font-weight: bold;
-    font-size: 15px;
-    outline: 0;
+header .nav_bar .main_div .nav_right .menu:hover {
+  opacity: 0.7;
+  transition: 0.6s;
+  background: grey;
+  color: #007ab7;
+  font-weight: bold;
+  font-size: 15px;
+  outline: 0;
 }
 
 header .nav_bar .nav_links {
-    display: flex;
-    align-items: center;    
-    gap: 30px;
-    margin-left: 40px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-left: 40px;
 }
 
-
-
-.nav_bar .nav_links li{
-    list-style-type: none;
+.nav_bar .nav_links li {
+  list-style-type: none;
 }
 
-header .nav_bar .namePrint{
-    position: absolute;
-    left: 20px;
-    top: 20px;
+header .nav_bar .namePrint {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  font-size: 20px;
+  /* z-index: 519; */
+  color: white;
+}
+
+header .nav_bar .logOutButton {
+  position: absolute;
+  right: 50px;
+  top: 20px;
+  padding: 7px 15px;
+  border: 0;
+  outline: 0;
+  /* background: #800000; */
+  background: #7882a4;
+  color: white;
+  border-radius: 10px;
+}
+
+.nav_bar .nav_right .nav_links li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+}
+
+@media (max-width: 600px) {
+  .nav_right .nav_links.hide {
+    display: none;
+  }
+
+  header .nav_bar .main_div .nav_right .menu {
+    display: block;
+  }
+
+  header {
+    height: 70px;
+  }
+
+  header .nav_bar .main_div {
+    gap: 0px;
+    /* flex-direction: column; */
+  }
+
+  .nav_right .nav_links {
     font-size: 20px;
-    /* z-index: 519; */
-    color: white;
-}
-
-header .nav_bar .logOutButton{
+    flex-direction: column;
     position: absolute;
-    right: 50px;
-    top: 20px;
-    padding: 7px 15px;
-    border: 0;
-    outline: 0;
-    /* background: #800000; */
-    background: #7882A4;
-    color: white;
-    border-radius: 10px;
+    top: 35px;
+    left: -8.5%;
+    background: white;
+    font-weight: bold;
+    width: 100%;
+    /* margin-left: -300px; */
+    margin-top: 35px;
+    /* margin-top: 75px; */
+    padding: 20px;
+    opacity: 0.9;
+    color: black;
+  }
 
+  .nav_links.marginNavLinks {
+    margin-top: 75px;
+  }
 
+  .nav_bar .nav_right .nav_links li a {
+    color: black;
+  }
 }
-
-.nav_bar .nav_right .nav_links li a{
-    text-decoration: none;
-    color: white;
-    font-weight: 500;
-}
-
-@media (max-width: 600px){
-    .nav_right .nav_links.hide{
-        display: none;
-    }
-
-    header .nav_bar .main_div .nav_right .nav_links .menu{
-        display: block;
-    }
-
-    header{
-        height:70px;
-    }
-
-    header .nav_bar .main_div{
-        gap: 0px;
-        /* flex-direction: column; */
-    }
-
-    .nav_right .nav_links{
-        font-size: 20px;
-        flex-direction: column;
-        position: absolute;
-        top: 50%;
-        left: -11%;
-        background: white;
-        font-weight: bold;
-        width: 100%;
-        /* margin-left: -300px; */
-        margin-top: 35px;
-        padding: 20px;
-        opacity: 0.9;
-        color: black;
-
-    }
-
-    .nav_bar .nav_right .nav_links li a{
-        color: black;
-    }
-}
-
 
 main {
-    flex: 1;
+  flex: 1;
 }
 
-main .content{
-    position: relative;
-    width: 100%;
-    height: 560px;
+main .content {
+  position: relative;
+  width: 100%;
+  height: 560px;
 }
 
-main .content img{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+main .content img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 main .content .inside_text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
-
-main .content .inside_text_content{
-    color: #fff;
+main .content .inside_text_content {
+  color: #fff;
 }
 
-main .content .inside_text .inside_text_content h1{
-    font-size: 40px;
-    color: #FFFFFF;
+main .content .inside_text .inside_text_content h1 {
+  font-size: 40px;
+  color: #ffffff;
 }
 
-main .content .inside_text .inside_text_content h4{
-    margin-top: 20px;
-    color: white;
+main .content .inside_text .inside_text_content h4 {
+  margin-top: 20px;
+  color: white;
 }
 
-main .content .connect_{
-    position: relative;
-    top: 175px;
-    /* width: 300px; */
+main .content .connect_ {
+  position: relative;
+  top: 175px;
+  /* width: 300px; */
 }
 
-main .content .inside_text .connect_ li{
-    position: relative;
-    /* margin-left: 108px; */
-    list-style-type: none;
-    margin-left: -155px;
-    color: white;
-    font-weight: bold;
-    margin-bottom: 10px;
+main .content .inside_text .connect_ li {
+  position: relative;
+  /* margin-left: 108px; */
+  list-style-type: none;
+  margin-left: -155px;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
-.connect_email_{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    
+.connect_email_ {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .connect_email_ #email,
-.connect_email_ #btn{
-    outline: 0;
-    padding: 10px 1rem;
-    display: flex;
+.connect_email_ #btn {
+  outline: 0;
+  padding: 10px 1rem;
+  display: flex;
 }
 
 .connect_email_ #email {
-    width: 250px;
-    border: 0;
-    border-radius: 2px;
+  width: 250px;
+  border: 0;
+  border-radius: 2px;
 }
 
 ::placeholder {
-    font-size: 15px;
-    color: grey;
+  font-size: 15px;
+  color: grey;
 }
 
-main .content .inside_text .connect_ #btn{
-    background: #8B0000;
-    border: 0;
-    height: 39px;
-    color: white;
-    font-weight: bold;
-    font-size: 14px;
-    transition: all 0.4s ease-in-out;
+main .content .inside_text .connect_ #btn {
+  background: #8b0000;
+  border: 0;
+  height: 39px;
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+  transition: all 0.4s ease-in-out;
 }
-main .content .inside_text .connect_ #btn:hover{
-    font-size: 20px;
-    cursor: pointer;
-}
-
-@media(max-width: 690px){
-    main .content .inside_text .inside_text_content h1{
-        font-size: 25px;
-    }
-
-    main .content .inside_text .inside_text_content h4{
-        font-size: 15px;;
-    }
+main .content .inside_text .connect_ #btn:hover {
+  font-size: 20px;
+  cursor: pointer;
 }
 
-@media (max-width: 1189.60px){
-    main .content .connect_{
-        top: 152px;
-    }
-}
-
-section .sub_div{
-    margin-top: 30px;
-}
-
-section .sub_div h1{
-    color: #007AB7; 
+@media (max-width: 690px) {
+  main .content .inside_text .inside_text_content h1 {
     font-size: 25px;
-    text-align: center;
+  }
+
+  main .content .inside_text .inside_text_content h4 {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 1189.6px) {
+  main .content .connect_ {
+    top: 152px;
+  }
+}
+
+section .sub_div {
+  margin-top: 30px;
+}
+
+section .sub_div h1 {
+  color: #007ab7;
+  font-size: 25px;
+  text-align: center;
 }
 
 section .qualities_ {
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
-section .qualities_ .icon_box{
-    margin-top: 0rem;
-    text-align: center;
+section .qualities_ .icon_box {
+  margin-top: 0rem;
+  text-align: center;
 }
 
-section .qualities_ .icon_box img{
-    width: 90px;
-    height: 90px;
+section .qualities_ .icon_box img {
+  width: 90px;
+  height: 90px;
 }
 
-section .qualities_ .icon_box h4{
-    margin-top: 10px;
-    color: #007AB7;  
-    /* width: 100px;   */
-    /* text-align: center; */
+section .qualities_ .icon_box h4 {
+  margin-top: 10px;
+  color: #007ab7;
+  /* width: 100px;   */
+  /* text-align: center; */
 }
 
-
-.know_about_us{
-    margin-top: 130px;
+.know_about_us {
+  margin-top: 130px;
 }
 
-.know_about_us .describing_us{
-    display: flex;
-    gap: 40px;
+.know_about_us .describing_us {
+  display: flex;
+  gap: 40px;
 }
 
-.know_about_us .describing_us img{
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    padding: 5px;
-    border: 5px solid #4D148C;
+.know_about_us .describing_us img {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  padding: 5px;
+  border: 5px solid #4d148c;
 }
 
-.know_about_us .describing_us .paragraph_{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.know_about_us .describing_us .paragraph_ {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.know_about_us .describing_us .paragraph_ h4{
-    color: #007AB7; 
-    font-size: 19px;
-    font-family: cursive;
-    font-style: italic;
+.know_about_us .describing_us .paragraph_ h4 {
+  color: #007ab7;
+  font-size: 19px;
+  font-family: cursive;
+  font-style: italic;
 }
 
-.know_about_us .describing_us .paragraph_ h1{
-    font-size: 29px;
+.know_about_us .describing_us .paragraph_ h1 {
+  font-size: 29px;
 }
 
-.know_about_us .describing_us .paragraph_ p{
-    color: black;
-    text-align: justify;
+.know_about_us .describing_us .paragraph_ p {
+  color: black;
+  text-align: justify;
 }
-
 
 @media (max-width: 850px) {
-    section .qualities_{
-        grid-template-columns: repeat(1, 1fr);
+  section .qualities_ {
+    grid-template-columns: repeat(1, 1fr);
+  }
 
-    }
+  section .qualities_ .icon_box {
+    text-align: center;
+    margin-top: 40px;
+  }
 
-    section .qualities_ .icon_box{
-        text-align: center;
-        margin-top: 40px;
-
-    }
-
-    .know_about_us .describing_us{
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-    }
+  .know_about_us .describing_us {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
 }
-
-
 
 footer {
-    background: #800000;
-    padding: 0;
-    /* height: 200px; */
-    margin-top: 60px;
-    /* position: relative; */
+  background: #800000;
+  padding: 0;
+  /* height: 200px; */
+  margin-top: 60px;
+  /* position: relative; */
 }
 
-
-footer .main_footer{
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 50px;
-    align-items: center;
-    /* margin-top: 50px; */
-    height: 200px;
-    /* text-align: center; */
-    /* background: white; */
+footer .main_footer {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 50px;
+  align-items: center;
+  /* margin-top: 50px; */
+  height: 200px;
+  /* text-align: center; */
+  /* background: white; */
 }
 
 footer .company_info {
-    display: flex;
-    flex-direction: column;
-    gap: 7px;
-    text-align: left;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  text-align: left;
 }
 
-footer .company_info h1{
-    color: #007AB7;
-    /* color: white; */
-    font-weight: bold;
+footer .company_info h1 {
+  color: #007ab7;
+  /* color: white; */
+  font-weight: bold;
 }
 
-footer .company_info h4{
-    /* text-align: center; */
-    color: white;
+footer .company_info h4 {
+  /* text-align: center; */
+  color: white;
 }
 
-footer .company_features .company_features_list{
-    list-style-type: none;
-    font-weight: bold;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    text-align: center;
+footer .company_features .company_features_list {
+  list-style-type: none;
+  font-weight: bold;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  text-align: center;
 }
 
-footer .company_features .company_features_list li a{
-    color: white;
-    text-decoration: none;
-    transition: all 0.4s ease-in-out;
+footer .company_features .company_features_list li a {
+  color: white;
+  text-decoration: none;
+  transition: all 0.4s ease-in-out;
 }
 
-footer .company_features .company_features_list li a:hover{
-    font-size: 30px;
+footer .company_features .company_features_list li a:hover {
+  font-size: 30px;
 }
-
 
 footer .company_features,
 footer .company_info,
-footer .company_services{
-    margin-top: 60px;
+footer .company_services {
+  margin-top: 60px;
 }
 
-footer .company_services{
-    display: flex;
-    flex-direction: column;
-    text-align: right;
-    gap: 20px;
+footer .company_services {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  gap: 20px;
 }
 
-footer .company_services h2 a{
-    /* color: #007AB7; */
-    color: white;
-    outline: 0;
-    text-decoration: none;
-    border-bottom: 3px solid black;
-    padding-bottom: 5px;
-    transition: all 0.5s ease-in-out;
-} 
-
-footer .company_services h2 a:hover{
-    color: black;
-    transition: all 0.5s ease-in-out;
-    border-bottom: 3px solid white;
+footer .company_services h2 a {
+  /* color: #007AB7; */
+  color: white;
+  outline: 0;
+  text-decoration: none;
+  border-bottom: 3px solid black;
+  padding-bottom: 5px;
+  transition: all 0.5s ease-in-out;
 }
 
+footer .company_services h2 a:hover {
+  color: black;
+  transition: all 0.5s ease-in-out;
+  border-bottom: 3px solid white;
+}
 
 /* footer .company_services h3{
     color: white;
     margin-top: 7px;
 } */
 
-.contact_way{
+.contact_way {
+  text-align: center;
+  /* padding-bottom: 20px; */
+  margin-bottom: 20px;
+}
+
+.contact_way legend {
+  font-size: 30px;
+  color: grey;
+  font-weight: bold;
+}
+
+.contact_way .contact_platform {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  gap: 50px;
+  /* justify-content:space-evenly; */
+  margin-top: 15px;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.contact_way .contact_platform a {
+  color: white;
+  font-size: 30px;
+  transition: all 0.3s ease-in-out;
+}
+
+.contact_way .contact_platform a:hover {
+  font-size: 40px;
+}
+
+@media (max-width: 1060px) {
+  footer {
+    height: 1000px;
+  }
+  footer .main_footer {
+    flex-direction: column;
+    /* text-align:center; */
+  }
+  .main_footer .company_info,
+  .main_footer .company_services {
     text-align: center;
-    /* padding-bottom: 20px; */
-    margin-bottom: 20px;
-}
+    /* background: orange; */
+  }
+  footer .connect_email_ {
+    margin-left: 0px;
+  }
 
-.contact_way legend{
-    font-size: 30px;
-    color: grey;
-    font-weight: bold;
-}
-
-.contact_way .contact_platform{
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    gap: 50px;
-    /* justify-content:space-evenly; */
-    margin-top: 15px;
+  .contact_way {
     position: relative;
-    padding-bottom: 20px;
+    top: 40%;
+  }
+  .contact_platform {
+    flex-direction: column;
+    /* background: orange; */
+  }
 }
 
-.contact_way .contact_platform a{
-    color: white;
-    font-size: 30px;
-    transition: all  0.3s ease-in-out;
-}
-
-.contact_way .contact_platform a:hover{
-    font-size: 40px;
-}
-
-
-@media (max-width: 1060px){
-    footer{
-        height: 1000px;
-    }
-    footer .main_footer {
-        flex-direction: column;
-        /* text-align:center; */
-    }
-    .main_footer .company_info,
-    .main_footer .company_services{
-        text-align: center;
-        /* background: orange; */
-    }
-    footer .connect_email_ {
-        margin-left: 0px;   
-    }
-
-    .contact_way{
-        position: relative;
-        top: 40%;
-    }
-    .contact_platform{
-        flex-direction: column;
-        /* background: orange; */
-    }
-}
-
-
-@keyframes navTransition{
-    0%{
-        top:-400px;
-        opacity:0;
-    }
-    100%{
-        top:0;
-        opacity: 1
-    }
+@keyframes navTransition {
+  0% {
+    top: -400px;
+    opacity: 0;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
+  }
 }
