edited on header and responsive

--- a/style.css
+++ b/style.css
@@ -85,10 +85,10 @@ header .nav_bar .main_nav {
 
 header .nav_bar .main_div {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 20px;
+  /* gap: 20px; */
 }
 
 header .nav_bar .main_div .nav_left {
@@ -101,8 +101,14 @@ header .nav_bar .main_div .nav_left img {
   outline: 0;
 }
 
+
 header .nav_bar .main_div .nav_links {
   outline: 0;
+}
+
+header .nav_bar .main_div .nav_right{
+  display: flex;
+  gap: 20px;
 }
 
 header .nav_bar .main_div .nav_right .menu {
@@ -151,9 +157,9 @@ header .nav_bar .namePrint {
 }
 
 header .nav_bar .logOutButton {
-  position: absolute;
-  right: 50px;
-  top: 20px;
+  /* position: absolute; */
+  /* right: 50px; */
+  /* top: 20px; */
   padding: 7px 15px;
   border: 0;
   outline: 0;
@@ -169,7 +175,8 @@ header .nav_bar .logOutButton {
   font-weight: 500;
 }
 
-@media (max-width: 600px) {
+
+@media (max-width: 770px) {
   .nav_right .nav_links.hide {
     display: none;
   }
@@ -210,6 +217,31 @@ header .nav_bar .logOutButton {
 
   .nav_bar .nav_right .nav_links li a {
     color: black;
+  }
+
+  header .nav_bar .logOutButton{
+    position: absolute;
+    right: 20px;
+    top: 22px;
+  }
+}
+
+@media(max-width: 456px){
+  header .nav_bar .main_div{
+    gap: -20px;
+  }
+
+  header .nav_bar .nav_left{
+
+    display: flex;
+    justify-content: left;
+    align-items: left;
+  }
+
+  header .nav_bar .nav_right{
+    display: flex;
+    justify-content: left;
+    align-items: left;
   }
 }
 
